# zeta-tiger-testsuite

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  ReleaseNotes.md  defaults.yaml  demoData.yaml  pom.xml  serenity.properties  tiger-cloud.yaml  tiger-local.yaml  tiger-proxy.yaml  tiger.yaml
.gitlab/merge_request_templates/: default.md  dependency_bump.md  docs_only.md  hotfix.md  new_ta_test.md
config/: license-header.txt  tiger-driver-template.jtmpl
docker/: README.md  build-common.sh  run-tests-common.sh
docs/: README.md  aliases.adoc  cucumber_methods.adoc  gemSpec_ZETA_V1.2.0_CC.html  gemSpec_ZETA_V1.3.0_CC.html  gemVZ_Afo_ZETA_Guard_V_1.1.0_V1.0.0.xml  gemVZ_Afo_ZETA_Guard_V_1.2.1-0_V1.0.0_CC.xlsx  gemVZ_Afo_ZETA_Guard_V_1.2.1-0_V1.0.0_CC.xml  generate_aliases.py  package.json  pnpm-lock.yaml  puppeteer-config.json  tgr_methods.adoc
docs/scripts/: README.md  pyproject.toml
docs/scripts/src/testsuite_docs/: __init__.py  asciidoc_tables.py  fetch_youtrack_testaspects.py  generate_cucumber_methods.py  gitlab_issue_sync.py  serenity_readme.py  update_testaspects.py  zeta_afos.py
docs/scripts/src/testsuite_docs/traceability/: __init__.py  __main__.py  builder.py  models.py
docs/scripts/tests/: test_zeta_afos.py
tiger/: defaults.yaml  eRezeptTestData.yaml  headers.yaml  paths.yaml  regex.yaml  telemetryElementNames.yaml  testdata.yaml  tiger-cloud.yaml  tiger-local.yaml  tiger-perf.yaml  tiger-proxy.yaml  tls-test-tool-config.yaml  tokens.yaml  zeta-deployment-config.yaml
(+1424 files in other folders)
